--- a/boxberry/css/bxbbutton.css
+++ b/boxberry/css/bxbbutton.css
@@ -11,6 +11,8 @@
     line-height: 25px;
     padding: 8px 8px;
     border: none !important;
+    position: relative;
+    z-index: 10;
 }
 a.bxbbutton {
     color: #ffffff !important;
